--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ body.vibrational-pulse {
     padding: 10px 15px;
     border-radius: 5px;
     border: none;
-    background-color: transparent;
+    background-color: transparent !important;
     /* color: #fff; */
     cursor: pointer;
     font-family: 'Doto', sans-serif;
@@ -492,7 +492,7 @@ body.vibrational-pulse {
 
 @keyframes aurora-button-send {
     0% { background-color:#000;color:aquamarine;}
-    50% { background-color:#000;;color:#514a9d;}
+    50% { background-color:#320258;;color:#514a9d;}
     100% { background-color:#000;;color:#24c6dc;}
 }
 
