--- a/style.css
+++ b/style.css
@@ -472,6 +472,7 @@ body.vibrational-pulse {
     resize: none;
     width:70%;
     height: 40px;filter:rotate(2deg);
+    opacity:0.7;
 }
 
 #chat-input::placeholder {
@@ -613,6 +614,7 @@ body.vibrational-pulse {
     box-shadow: 0 0 10px var(--aurora-color3);
     transform: rotate(2deg);
     transition: all 0.5s ease;
+    opacity:0.7;
     color:#999 !important;
 }
 
